<resources>
    <string name="app_name">WotStat</string>
    <string name="wotStatText">WotStat</string>
    <string name="playerStatButton">Гравця</string>
    <string name="clanStatButton">Клану</string>
    <string name="wotStatInfo">Знайти статистику</string>
    <string name="statInfo">Розрахувати статистику</string>
    <string name="userBack">Повернутися назад</string>
    <string name="writeNickname">Введіть нік-нейм користувача</string>

    <string name="avgDMGCalc">Розрахунок середньої шкоди</string>
    <string name="avgPercentageCalc">Розрахунок середнього відсотку перемог</string>
    <string name="avgAliveCalc">Розрахунок середнього відсотку виживання</string>
    <string name="avgExpCalc">Розрахунок середнього досвіду</string>

    <string name="wantAvg">бажана середня шкода</string>
    <string name="battles">кількість боїв на танку</string>
    <string name="avg">середня шкода</string>

    <string name="wantAvgExpText">бажаний середній досвід</string>
    <string name="avgExpText">середній досвід</string>
    <string name="battlesExpText">кількість боїв</string>

    <string name="avgPercentages">відсоток перемог</string>
    <string name="desiredAvgPercentage">бажаний відсоток перемог</string>

    <string name="WN8_hint">WN8</string>
    <string name="Percentage_hint">% перемог</string>
    <string name="DMG_hint">середня шкода</string>

    <string name="clr">Кольорова гама статистики</string>

    <string name="writeClanName">Введіть назву клану</string>
    <string name="findstatButton">Розрахувати</string>
    <string name="calcStat">Розрахунки</string>
    <string name="kroll">By Kroll</string>
    <string name="menu">Меню</string>
    <string name="statText">
Статистика гравця: \n
Клан: \n
Кількість боїв: \n
% перемог: \n
% влучень: \n
Середня шкода: \n
Середній досвід: \n
Максимум знищено за бій: \n
Максимальний досвід за бій: \n
    </string>
    <string name="clanStatText">
Клану: \n
Кількість гравців: \n
    </string>
    <string name="avgDamage">
        Кількість боїв задля отримання бажаної середньої шкоди: \n
        Якщо грати на 5000 DMG - \n
        Якщо грати на 4500 DMG - \n
        Якщо грати на 4000 DMG - \n
        Якщо грати на 3500 DMG - \n
    </string>
    <string name="avgExp">
        Кількість боїв задля отримання бажаного середнього досвіду: \n
        Якщо грати на 1200 EXP - \n
        Якщо грати на 1100 EXP - \n
        Якщо грати на 1050 EXP - \n
        Якщо грати на 1000 EXP - \n
    </string>
    <string name="avgPercentage">
        Кількість боїв задля отримання бажаного середнього досвіду: \n
        Якщо грати на 70% перемог - \n
        Якщо грати на 65% перемог - \n
        Якщо грати на 60% перемог - \n
    </string>
    <string name="avgAlive">
        Кількість боїв задля отримання бажаного середнього досвіду: \n
        Якщо грати на 70% перемог - \n
        Якщо грати на 65% перемог - \n
        Якщо грати на 60% перемог - \n
    </string>
    <string name="statShow">
        Ваша кольорова статистика: \n
        WN8 -  \n
        % перемог - \n
    </string>
</resources>